err
   Compiling termion v1.1.3 (file:///home/gyscos/dev/termion)
   Compiling cursive v0.3.5 (file:///home/gyscos/dev/cursive)
error[E0308]: mismatched types
   --> src/backend/termion.rs:181:61
    |
181 |                 TEvent::UnknownCSI(bytes) => Event::Unknown(bytes.len()),
    |                                                             ^^^^^^^^^^^ expected i32, found usize

error: aborting due to previous error

error: Could not compile `cursive`.

To learn more, run the command again with --verbose.
